--- a/src/App.scss
+++ b/src/App.scss
@@ -46,13 +46,26 @@
     }
   }
 }
-#orders {
+#order{
+ 
   .container {
   }
-  .orders {
+  .order {
     background: #95b9c9;
     width: 100%;
     height: 820px;
+    text-align: center;
+    .order-btn {
+        color: #FFF;
+        font-size: 36px;
+        font-weight: 500;
+        width: 254.1px;
+        height: 70px;
+        border-radius: 10px;
+        background: #20953A;
+        margin: 400px 0 0 800px;
+    }
+    
     h1 {
       text-align: center;
       padding: 50px;
